--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
         html, body {
             overflow: hidden;
         }
+        canvas{
+            border: 1px solid black;
+        }
     </style>
 </head>
-<body>
+<body style="display: flex; justify-content: center;">
     <script src="package.js"></script>
 </body>
 </html>
