--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </style>
 </head>
 <body style="display: flex; justify-content: center;">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.min.js"></script>
     <script src="package.js"></script>
 </body>
 </html>
