--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,13 +11,14 @@
         }
         html, body {
             overflow: hidden;
+            background-color: #111
         }
         canvas{
             border: 1px solid black;
         }
     </style>
 </head>
-<body style="display: flex; justify-content: center;">
+<body style="display: flex; justify-content: center; align-items: center; height: 100%;">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.min.js"></script>
     <script src="package.js"></script>
 </body>
